--- a/PART1/app/src/main/res/values/strings.xml
+++ b/PART1/app/src/main/res/values/strings.xml
@@ -23,4 +23,9 @@
     <string name="chart">Chart\n</string>
     <string name="search">Search\n</string>
     <string name="currency_convertor">Currency Convertor</string>
+    <string name="select_currency">Select Currency</string>
+    <string name="convert_currency">Convert Currency</string>
+    <string name="us_dollar">US Dollar</string>
+    <string name="_0_00">0.00</string>
+    <string name="usd">USD</string>
 </resources>
